# Philippides.jl

./: .gitignore  .gitmodules  README.md
Images/: Physical_Robot_traj.py  plot_JR_controller.py  plot_JR_posinput.py  plot_JR_traj.py  plot_JR_voltinput.py  plot_Robotran_controller.py  plot_Robotran_posinput.py  plot_Robotran_traj.py
JuliaRobotics/: Manifest.toml  Project.toml
JuliaRobotics/Simulator/: RobotSimulator.jl  simulation_controller.jl
JuliaRobotics/WalkingPatterns/: Dionysos_JR_trajectory.csv  ZMP.csv
JuliaRobotics/data/: Current.txt  Position.txt  Torque.txt  Velocity.txt  Voltage.txt
JuliaRobotics/data/Dionysos/controller/: Position_S0.txt  Position_S1.txt  Voltage_S0.txt  Voltage_S1.txt
JuliaRobotics/data/Dionysos/trajectory/: Current.txt  (+4 more)
JuliaRobotics/data/voltage-input/: Position.txt  Velocity.txt
Robot_data/: Robot_data_conversion.jl  utils_conversion.jl
Robot_data/Robot_200Hz/Inputs/: Position.txt  Velocity.txt  Voltage.txt
Robot_data/Robot_200Hz/Outputs/: Torque.txt
Robot_data/Robot_200Hz/Raw/: Current.txt  Position.txt  Velocity.txt  Voltage.txt
Robot_data/Robot_200Hz/Simulations/: Torque.txt
Robot_data/Robot_50Hz/Inputs/: Current.txt  Position.txt  Velocity.txt  Voltage.txt
Robot_data/Robot_50Hz/Raw/: Current.txt  Position.txt  Velocity.txt  Voltage.txt
Robot_data/Robot_50Hz/Simulations/: Torque.txt
Robot_data/Validations_Dionysos_Robot_Physique/: Traj_JuliaRobotics.txt  Traj_Robotran.txt
Robotran_J2C/symbolicR/: mbs_cons_hJ_philippides_c.c  mbs_gensensor_philippides_c.c  mbs_sensor_philippides_c.h  stdout.txt
Robotran_J2C/userfctR/: structures.c  structures.h  user_Derivative.c  user_ExtForces.c  user_IO.c  user_IO.h  user_JointForces.c  user_Link3DForces.c  user_LinkForces.c  user_all_id.h  user_cons_J_accelred.c  user_cons_hJ.c  user_hard_param.h  user_model.h
Robotran_J2C/workR/: CMakeLists.txt
Robotran_J2C/workR/src/: main.c
Robotran_c/dataR/: philippides_c.mbs
Robotran_c/symbolicR/: mbs_cons_jdqd_philippides_c.c  mbs_dirdyna_philippides_c.c  mbs_dirdyna_philippides_c.h  mbs_extforces_philippides_c.c  mbs_extforces_philippides_c.h  mbs_gensensor_philippides_c.h  mbs_invdyna_philippides_c.c  mbs_invdyna_philippides_c.h  mbs_link3D_philippides_c.c  mbs_link_philippides_c.c  mbs_sensor_philippides_c.c  stderr.txt
Robotran_c/userfctR/: structures.c  structures.h  user_DrivenJoints.c  user_JointForces.c  user_cons_jdqd.c  user_dirdyn.c  user_equil.c  user_invdyn.c  user_load.c  user_model.c
Robotran_c/workR/: CMakeLists.txt
Robotran_c/workR/src/: main.c
Robotran_py/Walking_Patterns/: WP_Dionysos_Robotran_controller.csv  WP_Dionysos_Robotran_trajectory.csv
Robotran_py/dataR/: Philippides_py.mbs
Robotran_py/symbolicR/: acl.txt  mbs_cons_hJ_Project_mbs.py  mbs_cons_hJ_philippides_py.py  mbs_cons_jdqd_Project_mbs.py  mbs_cons_jdqd_philippides_py.py  mbs_dirdyna_Project_mbs.py  mbs_dirdyna_philippides_py.py  mbs_extforces_Project_mbs.py  mbs_extforces_philippides_py.py  mbs_gensensor_Project_mbs.py  mbs_gensensor_philippides_py.py  mbs_invdyna_Project_mbs.py  mbs_invdyna_philippides_py.py  mbs_link3D_Project_mbs.py  mbs_link3D_philippides_py.py  mbs_link_Project_mbs.py  mbs_link_philippides_py.py  mbs_sensor_Project_mbs.py  mbs_sensor_philippides_py.py  stderr.txt  stdout.txt
Robotran_py/userfctR/: user_DrivenJoints.py  user_ExtForces.py  user_JointForces.py  user_dirdyn.py
Robotran_py/workR/: main.py
(+15 files in other folders)
